[build-system]
requires = ["setuptools>=61.0","vunit_hdl>=4.6.0", "toml>=0.10.2"]
build-backend = "setuptools.build_meta"


[project]
name = "VUnit-helpers"
version = "0.0.1"
authors = [
  { name="Markus Leiter", email="leiter@p2l2.com" },
]
description = "Common tools and helpers to simplify the VUnit run scripts"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "pathlib",
    "subprocess",
    "sys",
    "os",
]

[project.urls]
"Homepage" = "https://github.com/p2l2/VUnit-helpers"
"Bug Tracker" = "https://github.com/p2l2/VUnit-helpers/issues"
